T1Comercios Docs add FileManager

--- a/examples/T1Comercios/T1Comercios-FileManager.yaml
+++ b/examples/T1Comercios/T1Comercios-FileManager.yaml
@@ -10,7 +10,7 @@ paths:
    
    post:
       tags:
-        - Subir Imganes.
+        - Subir Imagenes
       parameters:
        - name: BucketName
          description: "Bucket donde se almacenara la imagen, la nomenclatura es : products_IDTIENDA"
