T1Comercios Docs Pedidos

--- a/examples/T1Comercios/T1Comercios_Pedidos_V1.yaml
+++ b/examples/T1Comercios/T1Comercios_Pedidos_V1.yaml
@@ -16,8 +16,8 @@ paths:
     get:
       tags: 
         - Pedidos
-      summary: Listado de pedidos de un comercio.
-      description: Retorna el listado de pedidos de un comercio. 
+      summary: Listado de pedidos de un comercio
+      description: Retorna el Listado de pedidos de un comercio 
       operationId: getOrdersFull
       parameters:
         - $ref: '#/components/parameters/IDSELLER'
